--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Biały Kwadrat, Nie Kliknij Go!</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body id="body">
     <div id="game">
       <div id="timer" class="timer">
         <p class="text">TIME LEFT: <span id="time">-</span></p>
@@ -61,7 +61,7 @@
         <p class="text">SCORE: <span id="score">0</span></p>
         <p class="text">MISS: <span id="miss">0</span></p>
       </div>
-      <button onclick="darkMode()">Dark Mode</button>
+      <button class="theme-button" onclick="toogleTheme()">Dark Mode</button>
     </div>
     <script src="script.js"></script>
   </body>
