--- a/index.html
+++ b/index.html
@@ -3,66 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Biały Kwadrat, Nie Kliknij Go!</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.scss" />
   </head>
-  <body id="body">
-    <div id="game">
-      <div id="timer" class="timer">
-        <p class="text">TIME LEFT: <span id="time">-</span></p>
-      </div>
-      <main id="board" class="board">
-        <button
-          id="0"
-          class="button-empty"
-          onclick="handleTileClick(0)"
-        ></button>
-        <button
-          id="1"
-          class="button-empty"
-          onclick="handleTileClick(1)"
-        ></button>
-        <button
-          id="2"
-          class="button-empty"
-          onclick="handleTileClick(2)"
-        ></button>
-        <button
-          id="3"
-          class="button-empty"
-          onclick="handleTileClick(3)"
-        ></button>
-        <button
-          id="4"
-          class="button-empty"
-          onclick="handleTileClick(4)"
-        ></button>
-        <button
-          id="5"
-          class="button-empty"
-          onclick="handleTileClick(5)"
-        ></button>
-        <button
-          id="6"
-          class="button-empty"
-          onclick="handleTileClick(6)"
-        ></button>
-        <button
-          id="7"
-          class="button-empty"
-          onclick="handleTileClick(7)"
-        ></button>
-        <button
-          id="8"
-          class="button-empty"
-          onclick="handleTileClick(8)"
-        ></button>
-      </main>
-      <div class="score-box" id="scoreBox">
-        <p class="text">SCORE: <span id="score">0</span></p>
-        <p class="text">MISS: <span id="miss">0</span></p>
-      </div>
-      <button class="theme-button" onclick="toogleTheme()">Dark Mode</button>
-    </div>
-    <script src="script.js"></script>
+  <h1>TilesGame</h1>
+  <p>Timer</p>
+  <input type="number" id="timerDurationInput">
+  <p>Tiles</p>
+  <input type="range" id="numberLinkInput" min="2" max="6" value="3" onchange="updateTextInput(this.value);" >
+  <p id="rangeInputDisplay">3x3</p>
+  <a onclick='gameParameters()' href="#" id="startGameLink">START</a>
+  <script src="script.js"></script>
   </body>
 </html>
