--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Biały Kwadrat, Nie Kliknij Go!</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="icon.png">
   </head>
   <body id="body">
     <div id="game">
